# crewai-mcp-demo

./: .env_template  .gitignore  install.sh  pyproject.toml  run_app.sh  run_crew.sh  setup_ollama.sh
research_crew/: crew.py  pyproject.toml
research_ui/: app.py  pyproject.toml
search_server/: pyproject.toml  server.py
